# privatepixel

./: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
e2e/: privatepixel.spec.ts
public/: manifest.webmanifest  robots.txt  sitemap.xml
src/: main.tsx
src/app/: App.css  App.test.tsx  App.tsx
src/features/background-removal/: localBackgroundRemoval.test.ts  localBackgroundRemoval.ts
src/features/object-selection/: localObjectSelection.test.ts  localObjectSelection.ts
src/image/: assets.ts  download.ts  metadata.test.ts  metadata.ts  options.test.ts  options.ts  types.ts
src/wasm/: privatepixelCore.ts  privatepixel_core.generated.ts
src/workers/: image.worker.test.ts  image.worker.ts  imageClient.ts  jobState.test.ts  jobState.ts
wasm/privatepixel-core/: Cargo.toml
wasm/privatepixel-core/src/: lib.rs
