[package]
name = "privatepixel-core"
version = "0.1.0"
edition = "2021"
description = "Narrow Rust/WASM image processing core for PrivatePixel."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
